# Agent_CV

./: .agent.md  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  check_schema.py  deploy.ps1  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt  tmp_full_reingest_with_lang.py
agent-cv-devtools/: pyproject.toml
agent-cv-devtools/appPackage/: manifest.json
agent-cv-devtools/src/: main.py
agent_cv/: __init__.py
scripts/: build-pgvector.ps1  init_db.py
sql/: 001_init.sql  002_graph_audit_migration.sql  003_schema_improvements.sql  004_sharepoint.sql  005_sharepoint_mtime.sql  006_owv_employees.sql
src/agent_cv/: __init__.py  config.py  main.py
src/agent_cv/api/: models.py  routes.py
src/agent_cv/db/: connection.py  schema.py
src/agent_cv/ingestion/: embedding_service.py  filename_parser.py  ingest_service.py  language_detection_service.py  owv_sync_service.py  sharepoint_watcher.py  vendor_discovery_service.py  vision_extraction_service.py
src/agent_cv/services/: agent_service.py  graph_service.py  query_service.py  response_service.py  retrieval_service.py  translation_service.py
src/agent_cv/services/templates/: europass_cv.html
src/agent_cv/teams/: __init__.py  agent.py
teams-app/: .env.example  README.md  build-package.ps1
teams-app/appPackage/: manifest.json
teams-app/src/: main.py
